--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
 
 							<td style="line-height: 12pt; height: 10px">
 								<span class="pagetop">
-									<b class="headerTitle">
+									<b class="headertitle">
 										<a href="">Hacker News</a>
 									</b>
 									<a href="">new</a>
