--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div id="content">
+<div id="container">
   <app-header></app-header>
   <router-outlet></router-outlet>
-  <!-- <app-footer></app-footer> -->
+  <app-footer></app-footer>
 </div>
