--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,2 +1,65 @@
 $mobile-only: 'only screen and (max-width : 768px)';
 
+#head{
+	@media #{$mobile-only}{
+		height: 70px;
+		top: 15px;
+	}
+
+	a{
+		color: #000000;
+		text-decoration: none;
+	}
+}
+
+.pagetop{
+  font-size: 10pt;
+  color: #222222;
+
+  @media #{$mobile-only} {
+    display: block;
+    margin: 3px 5px;
+    font-size: 12px;
+  }
+}
+
+b.headertitle{
+  margin-right: 5px;
+
+  @media #{$mobile-only} {
+    display: block;
+    font-size: 15px;
+  }
+}
+
+.logo {
+  width: 18px; 
+  padding-right: 4px;
+
+  /*@media #{$mobile-only} {
+    width: 18px;
+    height: 18px;
+    border: 1px white solid;
+  }*/
+}
+
+.logo-image{
+  width: 18;
+  height: 18;
+  border:1px white solid;
+}
+
+.login{
+  font-size: 10pt;
+  color: #222222;
+}
+
+.left {
+  text-align: right; 
+  padding-right: 4px;
+
+  /*@media #{$mobile-only} {
+    width: 100%;
+    left: 0;
+  }*/
+}
