--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@media(max-width: 768px) {
+    body {
+        margin: 0 !important
+    }
+}
